@@ -1,3 +1,8 @@
+2005-04-05  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
+
+	PR libfortran/20755
+	* gfortran.dg/pr20755.f: New test.
+
 2005-04-05  Feng Wang  <fengwang@nudt.edu.cn>
 
 	* gfortran.dg/pr15959.f90: New test.
